--- a/static/index.html
+++ b/static/index.html
@@ -317,6 +317,7 @@
                     <!-- End Charla 1 -->
 
                     <!-- Charla 2 -->
+<!--
                     <div class="panel panel-default">
                       <div class="speaker-wrapper">
                         <img src="{% static 'img/speaker/abraham_barrera.jpeg' %}" class="img-responsive img-circle" alt="Foto Abraham Barrera" />
@@ -340,6 +341,47 @@
                           <article>
                             <p>(No disponible)</p>
                             <p class="author"><a href="https://twitter.com/abraham_barrera" target="_blank"><strong><i class="fa fa-user"></i>@abraham_barrera</strong></a></p>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+-->
+                    <!-- End Charla 2 -->
+
+                    <!-- Charla 2 -->
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="{% static 'img/speaker/andres_duran.jpeg' %}" class="img-responsive img-circle" alt="Foto Andrés Durán" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time">
+                            <i class="fa fa-clock-o"></i>
+                            11.00
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item2" class="collapsed">
+                            SMART CITIES, una oportunidad para las ciudades de Chile
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div id="item2" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          <article>
+                            <p>Las ciudades tienen una oportunidad para el
+                            desarrollo de una economía emergente basada en
+                            la integración de tecnologías móviles, se trata de
+                            relacionarnos y participar activamente en el diseño
+                            y definiciones que deberían tomar nuestras ciudades en
+                            el futuro próximo.<br/>
+                            Asumiendo que los recursos seguirán siendo escasos, la
+                            decisión de dónde aplicarlos es esencial, por lo que
+                            resolver y decidir de manera informada será clave en el
+                            futuro.<br/>
+                            Ciudadanos inteligentes para una ciudad Inteligente.</p>
+                            <p class="author"><a href="https://twitter.com/andresduran" target="_blank"><strong><i class="fa fa-user"></i>@andresduran</strong></a></p>
                           </article>
                         </div>
                       </div>
@@ -368,12 +410,12 @@
                       <div id="item3" class="panel-collapse collapse">
                         <div class="panel-body">
                           <article>
-                            <p>Programa tus Ideas es una estrategia que buscar acercar la
-                            programación a jóvenes que muchas veces no tienen los medios para
-                            financiar cursos de programación y que ven en esta área una eventual
-                             alternativa de empleo.  Esta charla dará a conocer como se vinculan
-                             proyectos sociales, con tecnología y educación y el impacto que
-                             esto tiene a nivel social.</p>
+                            <p>Programa tus Ideas es una estrategia que buscar acercar
+                            la programación a jóvenes que muchas veces no tienen los medios
+                            para financiar cursos de programación y que ven en esta área una
+                            eventual alternativa de empleo.  Esta charla dará a conocer como
+                            se vinculan proyectos sociales, con tecnología y educación y el
+                            impacto que esto tiene a nivel social.</p>
                             <p class="author"><a href="https://twitter.com/cataarayalira" target="_blank"><strong><i class="fa fa-user"></i>@cataarayalira</strong></a></p>
                           </article>
                         </div>
@@ -1022,6 +1064,7 @@ ingeniería de software
     <br />
     <section class="row">
       <!-- template expositor -->
+<!--
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
           <div class="img-wrapper">
@@ -1036,6 +1079,7 @@ ingeniería de software
           </div>
         </div>
       </div>
+-->
       <!-- end template expositor -->
 
       <div class="col-md-3 col-sm-3 col-xs-6">
@@ -1053,8 +1097,6 @@ ingeniería de software
         </div>
       </div>
 
-      <div class="clearfix visible-xs"></div>
-
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1070,6 +1112,8 @@ ingeniería de software
         </div>
       </div>
 
+      <div class="clearfix visible-xs"></div>
+
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1084,10 +1128,7 @@ ingeniería de software
           </div>
         </div>
       </div>
-      <div class="clearfix visible-xs"></div>
-    </section>
 
-    <section class="row">
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1102,6 +1143,10 @@ ingeniería de software
         </div>
       </div>
 
+      <div class="clearfix visible-xs"></div>
+    </section>
+
+    <section class="row">
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1116,8 +1161,6 @@ ingeniería de software
           </div>
         </div>
       </div>
-
-      <div class="clearfix visible-xs"></div>
 
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
@@ -1134,6 +1177,8 @@ ingeniería de software
         </div>
       </div>
 
+      <div class="clearfix visible-xs"></div>
+
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1147,10 +1192,6 @@ ingeniería de software
         </div>
       </div>
 
-      <div class="clearfix visible-xs"></div>
-    </section>
-    <section class="row">
-
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1162,6 +1203,25 @@ ingeniería de software
           <div class="social-link">
             <a href="https://twitter.com/jmaurock"><span class="fa fa-twitter"></span></a>
             <a href="https://www.linkedin.com/in/jorgeaguilerayantani"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="clearfix visible-xs"></div>
+    </section>
+    <section class="row">
+
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/andres_duran.jpg' %}" class="img-responsive img-circle" alt="Foto Andrés Durán" />
+          </div>
+          <div class="name">Andrés Durán Astorga</div>
+          <div class="sub">Socio Fundador en D+Arquitectos y D+Diseño&Innovación</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/andresduran"><span class="fa fa-twitter"></span></a>
+            <a href="https://cl.linkedin.com/in/andresduran"><span class="fa fa-linkedin"></span></a>
           </div>
         </div>
       </div>
