Agrega expositor de Victor Muñoz. Aún sin charla.

--- a/static/index.html
+++ b/static/index.html
@@ -1214,7 +1214,7 @@ ingeniería de software
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
-          <img src="{% static 'img/speaker/andres_duran.jpg' %}" class="img-responsive img-circle" alt="Foto Andrés Durán" />
+          <img src="{% static 'img/speaker/andres_duran.jpeg' %}" class="img-responsive img-circle" alt="Foto Andrés Durán" />
           </div>
           <div class="name">Andrés Durán Astorga</div>
           <div class="sub">Socio Fundador en D+Arquitectos y D+Diseño&Innovación</div>
@@ -1226,21 +1226,19 @@ ingeniería de software
         </div>
       </div>
 
-<!-- Por confirmar
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
-          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
+          <img src="{% static 'img/speaker/victor_munoz.jpg' %}" class="img-responsive img-circle" alt="Foto Victor Hugo Muñoz" />
           </div>
-          <div class="name">Juan Felipe Calderón Maureira</div>
-          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
+          <div class="name">Victor Hugo Muñoz</div>
+          <div class="sub">Gerente de nuevos negocios en Claro Chile</div>
           <p class="small"></p>
           <div class="social-link">
-            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
+            <a href="https://cl.linkedin.com/pub/víctor-hugo-muñoz-ramirez/26/401/809"><span class="fa fa-linkedin"></span></a>
           </div>
         </div>
       </div>
--->
       <div class="clearfix visible-xs"></div>
 
 
