--- a/main/static/register_base.html
+++ b/main/static/register_base.html
@@ -9,7 +9,7 @@
   <title>{{title}} - VMC</title>
   <meta name="description" content="Conferencia sobre tecnologías móviles">
   <meta name="keywords" content="Android, iOS, Windows Phone, Valparaíso, Conferencia, Hackathon, Charlas, Talleres, Cursos, Móvil">
-  <meta name="author" content="Gabriel Ruiz">
+  <meta name="author" content="Valparaíso Mobile Conf">
   <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:700&family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css" media="all" />
